kubernetes/service-account.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-account
  labels:
    app: service-account
  #externalsecrets.kubernetes-client.io/secret-ref: gcp-secrets-manager

spec:
  selector:
    matchLabels:
      app: service-account
  template:
    metadata:
      labels:
        app: service-account
    spec:
      hostAliases:
      - ip: "0.0.0.0"
        hostnames:
          - "service-account"
      containers:
        - name: service-account
          image: europe-west9-docker.pkg.dev/harmony-383520/harmony/harmony-service-account:stable
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 256Mi
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
