kubernetes/service-authentication.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-authentication
spec:
  selector:
    matchLabels:
      app: service-authentication
  template:
    metadata:
      labels:
        app: service-authentication
    spec:
      hostAliases:
        - ip: "0.0.0.0"
          hostnames:
            - "service-authentication"
      containers:
        - name: service-authentication
          image: europe-west9-docker.pkg.dev/harmony-383520/harmony/harmony-service-authentication:stable
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 256Mi
