kubernetes/service-friendship.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-friendship
spec:
  selector:
    matchLabels:
      app: service-friendship
  template:
    metadata:
      labels:
        app: service-friendship
    spec:
      hostAliases:
        - ip: "0.0.0.0"
          hostnames:
            - "service-friendship"
      containers:
        - name: service-friendship
          image: europe-west9-docker.pkg.dev/harmony-383520/harmony/harmony-service-friendship:stable
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 256Mi
