kubernetes/service-notification.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-notification
  labels:
    app: service-notification
spec:
  selector:
    matchLabels:
      app: service-notification
  template:
    metadata:
      labels:
        app: service-notification
    spec:
      hostAliases:
        - ip: "0.0.0.0"
          hostnames:
            - "service-notification"
      containers:
        - name: service-notification
          image: europe-west9-docker.pkg.dev/harmony-383520/harmony/harmony-service-notification:stable
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 256Mi
