kubernetes/service-search.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-search
spec:
  selector:
    matchLabels:
      app: service-search
  template:
    metadata:
      labels:
        app: service-search
    spec:
      hostAliases:
      - ip: "0.0.0.0"
        hostnames:
          - "service-search"
      containers:
        - name: service-search
          image: europe-west9-docker.pkg.dev/harmony-383520/harmony/harmony-service-search:stable
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 256Mi
