kubernetes/client.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: client-svc
spec:
  type: NodePort
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 60080
      targetPort: 80
