kubernetes/gateway.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: service-gateway-svc
spec:
  type: NodePort
  selector:
    app: service-gateway
  ports:
    - protocol: TCP
      port: 60000
      targetPort: 3000
