kubernetes/service-account.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: service-account
spec:
  type: ClusterIP
  selector:
    app: service-account
  ports:
    -  port: 3000
