kubernetes/service-authentication.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: service-authentication
spec:
  type: ClusterIP
  selector:
    app: service-authentication
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
