kubernetes/service-file.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: service-file
spec:
  type: ClusterIP
  selector:
    app: service-file
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
