kubernetes/service-friendship.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: service-friendship
spec:
  type: ClusterIP
  selector:
    app: service-friendship
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
