kubernetes/service-message.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: service-message
spec:
  type: ClusterIP
  selector:
    app: service-message
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
