kubernetes/service-notification.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: service-notification-svc
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"60000":"service-notification-backendconfig"}}'
spec:
  type: NodePort
  selector:
    app: service-notification
  ports:
    - protocol: TCP
      port: 60000
      targetPort: 3001

---
apiVersion: v1
kind: Service
metadata:
  name: service-notification
spec:
  type: ClusterIP
  selector:
    app: service-notification
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
