kubernetes/service-role.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: service-role
spec:
  type: ClusterIP
  selector:
    app: service-role
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
