kubernetes/service-search.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: service-search
spec:
  type: ClusterIP
  selector:
    app: service-search
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
