kubernetes/service-server.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: service-server
spec:
  type: ClusterIP
  selector:
    app: service-server
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
