kubernetes/gateway.networking.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-gateway-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: harmony-gateway-ip
    networking.gke.io/managed-certificates: service-gateway-cert
spec:
  rules:
    - host: api.harmony.vg
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: service-gateway-svc
                port:
                  number: 60000
