kubernetes/service-notification.networking.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-notification-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: harmony-notification-ip
    networking.gke.io/managed-certificates: service-notification-cert
spec:
  rules:
    - host: ws.harmony.vg
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: service-notification
                port:
                  number: 60000
